--- a/web/templates/post/form.html.eex
+++ b/web/templates/post/form.html.eex
@@ -12,7 +12,7 @@
 
   <div class="form-group">
     <%= label f, :content, "Content", class: "control-label" %>
-    <%= text_input f, :content, class: "form-control" %>
+    <%= textarea f, :content, class: "form-control" %>
   </div>
 
   <div class="form-group">
