--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -15,7 +15,9 @@
     <div class="container" role="main">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="http://www.phoenixframework.org/docs">Get Started</a></li>
+          <li>
+            <%= link "Posts", to: post_path(@conn, :index), class: "btn btn-default btn-xs" %>
+          </li>
         </ul>
         <span class="logo"></span>
       </div>
